--- a/OZ_Frontend/[CSS 과제] 2일차/profile.html
+++ b/OZ_Frontend/[CSS 과제] 2일차/profile.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="utf-8" />
     <title>자기소개 페이지</title>
-    <link href="1st_Project_profile.css" rel="stylesheet">
+    <link href="1st_Project_profile.css" rel="stylesheet" />
   </head>
   <body>
     <h1 title="터미널 소개">자기소개 페이지</h1>
-    <img src="images/terminal.png" alt="terminal image" width="300" />
+    <img src="../images/terminal.png" alt="terminal image" width="300" />
     <h2>김진원</h2>
     <div id="intro">
       <p>안녕하세요. 웹 개발자입니다. 어플리케이션 개발을 담당하고 있습니다.</p>
     </div>
     <hr />
     <div id="content">
-      <h3>취미</h3>
+      <h2>취미</h2>
       <p>저는 다음과 같은 취미를 가지고 있습니다.</p>
       <p>
         &nbsp;&nbsp;- 걷기 <br />
